@@ -1,5 +1,12 @@
 2009-02-13  Michael Hutchinson  <mhutchinson@novell.com>
 
+	* MonoDevelop.Xml.StateEngine/XmlTagState.cs:
+	* MonoDevelop.Xml.StateEngine/XmlAttributeState.cs:
+	* MonoDevelop.Xml.StateEngine/XmlAttributeValueState.cs:
+	  Improve error handling.
+
+2009-02-13  Michael Hutchinson  <mhutchinson@novell.com>
+
 	* MonoDevelop.XmlEditor/XmlDocumentParser.cs: Fix logic error
 	  that caused NRE with empty documents.
 
